<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/first_team_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/first_team_name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/title_margin_bottom"
                android:layout_marginLeft="@dimen/title_margin_left"
                android:layout_marginRight="@dimen/title_margin_right"
                android:layout_marginTop="@dimen/title_margin_top"
                android:fontFamily="@string/title_font_family"
                android:gravity="center_horizontal"
                android:text="@string/title_team_a_text"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/foul_score_team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/foul_score_margin_left"
                android:layout_marginRight="@dimen/foul_score_margin_right"
                android:layout_marginTop="@dimen/foul_score_margin_top"
                android:fontFamily="@string/score_font_family"
                android:gravity="right|center"
                android:text="@string/foul_score_init_value"
                android:textColor="@color/foul_score_text_color"
                android:textSize="@dimen/foul_score_text_size" />

            <TextView
                android:id="@+id/goal_score_team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/goal_score_margin_left"
                android:layout_marginRight="@dimen/goal_score_margin_right"
                android:fontFamily="@string/score_font_family"
                android:gravity="center_horizontal"
                android:text="@string/goal_init_value"
                android:textColor="@color/goal_score_text_color"
                android:textSize="@dimen/goal_score_text_size" />

            <ImageView
                android:id="@+id/first_team_image"
                android:layout_width="@dimen/image_layout_width"
                android:layout_height="@dimen/image_layout_height"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/image_margin"
                android:src="@drawable/image_first_team" />

            <Button
                android:id="@+id/goal_button_team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/buttons_margin_left"
                android:layout_marginRight="@dimen/buttons_margin_right"
                android:fontFamily="@string/score_font_family"
                android:onClick="buttonClick"
                android:text="@string/goal_text"
                android:textColor="@color/goal_score_text_color"
                android:textStyle="bold" />

            <Button
                android:id="@+id/foul_button_team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/buttons_margin_left"
                android:layout_marginRight="@dimen/buttons_margin_right"
                android:layout_marginTop="@dimen/buttons_margin_top"
                android:onClick="buttonClick"
                android:text="@string/foul_text"
                android:textAllCaps="true"
                android:textColor="@color/foul_score_text_color"
                android:textStyle="normal" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/center_line_width"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/center_line_top_margin"
            android:background="@color/center_line_color" />

        <LinearLayout
            android:id="@+id/second_team_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/second_team_name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/title_margin_bottom"
                android:layout_marginLeft="@dimen/title_margin_left"
                android:layout_marginRight="@dimen/title_margin_right"
                android:layout_marginTop="@dimen/title_margin_top"
                android:fontFamily="@string/title_font_family"
                android:gravity="center_horizontal"
                android:text="@string/title_team_b_text"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/foul_score_team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/foul_score_margin_left"
                android:layout_marginRight="@dimen/foul_score_margin_right"
                android:layout_marginTop="@dimen/foul_score_margin_top"
                android:fontFamily="@string/score_font_family"
                android:gravity="right|center"
                android:text="@string/foul_score_init_value"
                android:textColor="@color/foul_score_text_color"
                android:textSize="@dimen/foul_score_text_size" />

            <TextView
                android:id="@+id/goal_score_team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/goal_score_margin_left"
                android:layout_marginRight="@dimen/goal_score_margin_right"
                android:fontFamily="@string/score_font_family"
                android:gravity="center_horizontal"
                android:text="@string/goal_init_value"
                android:textColor="@color/goal_score_text_color"
                android:textSize="@dimen/goal_score_text_size" />

            <ImageView
                android:id="@+id/second_team_image"
                android:layout_width="@dimen/image_layout_width"
                android:layout_height="@dimen/image_layout_height"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/image_margin"
                android:src="@drawable/image_second_team" />

            <Button
                android:id="@+id/goal_button_team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/buttons_margin_left"
                android:layout_marginRight="@dimen/buttons_margin_right"
                android:fontFamily="@string/score_font_family"
                android:onClick="buttonClick"
                android:text="@string/goal_text"
                android:textColor="@color/goal_score_text_color"
                android:textStyle="bold" />

            <Button
                android:id="@+id/foul_button_team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/buttons_margin_left"
                android:layout_marginRight="@dimen/buttons_margin_right"
                android:layout_marginTop="@dimen/buttons_margin_top"
                android:onClick="buttonClick"
                android:text="@string/foul_text"
                android:textAllCaps="true"
                android:textColor="@color/foul_score_text_color"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/reset_button_margin"
        android:fontFamily="@string/score_font_family"
        android:onClick="buttonClick"
        android:text="@string/reset_button_text"
        android:textAllCaps="true"
        android:textSize="@dimen/reset_button_text_size" />
</RelativeLayout>
